--- a/mnist-pyspark.ipynb
+++ b/mnist-pyspark.ipynb
@@ -215,9 +215,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sparksm-1a-endpoint-bbeed2ee4272-2020-04-15T15-48-02-021\n"
+     ]
+    }
+   ],
    "source": [
     "# Set parameters for K-Means\n",
     "kmeans_estimator.setFeatureDim(784)\n",
@@ -242,9 +250,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+--------------------+-------------------+---------------+\n",
+      "|label|            features|distance_to_cluster|closest_cluster|\n",
+      "+-----+--------------------+-------------------+---------------+\n",
+      "|  7.0|(784,[202,203,204...|     1431.529296875|            3.0|\n",
+      "|  2.0|(784,[94,95,96,97...|  2056.569091796875|            5.0|\n",
+      "|  1.0|(784,[128,129,130...|  898.5811767578125|            4.0|\n",
+      "|  0.0|(784,[124,125,126...| 1570.7449951171875|            2.0|\n",
+      "|  4.0|(784,[150,151,159...| 1531.3636474609375|            6.0|\n",
+      "|  1.0|(784,[156,157,158...|  883.3609619140625|            4.0|\n",
+      "|  4.0|(784,[149,150,151...| 1663.6822509765625|            6.0|\n",
+      "|  9.0|(784,[179,180,181...|  1663.968505859375|            6.0|\n",
+      "|  5.0|(784,[129,130,131...|   2068.77392578125|            7.0|\n",
+      "|  9.0|(784,[209,210,211...| 1409.8900146484375|            3.0|\n",
+      "|  0.0|(784,[123,124,125...| 1604.2630615234375|            2.0|\n",
+      "|  6.0|(784,[94,95,96,97...|  2033.105712890625|            2.0|\n",
+      "|  9.0|(784,[208,209,210...| 1308.1448974609375|            6.0|\n",
+      "|  0.0|(784,[152,153,154...|  1576.290283203125|            2.0|\n",
+      "|  1.0|(784,[125,126,127...|  909.8931274414062|            1.0|\n",
+      "|  5.0|(784,[124,125,126...|  1750.927490234375|            5.0|\n",
+      "|  9.0|(784,[179,180,181...| 1389.2716064453125|            6.0|\n",
+      "|  7.0|(784,[200,201,202...|  1630.471435546875|            0.0|\n",
+      "|  3.0|(784,[118,119,120...|   2112.99658203125|            5.0|\n",
+      "|  4.0|(784,[158,159,185...|    1192.0146484375|            6.0|\n",
+      "+-----+--------------------+-------------------+---------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "transformedData = initialModel.transform(testData)\n",
     "\n",
